# piBot

./: captureCam.sh  information.txt
RS485ExternalBoards/AnalogBatteryBoard/: ADC2Main.c  information.txt  readAnalog.c  readAnalog.h
RS485ExternalBoards/CommonPIC_Files/: Information.txt
RS485ExternalBoards/LMD18200MotorDriver/: Information.txt
RS485ExternalBoards/ServoControlBoard/: Information.txt  ModBusRTU.c  ServoControl2Main.c  USDMain.c
RS485ExternalBoards/cameraAngleServoControl/: information.txt
followBlob/: CMakeCache.txt  CMakeLists.txt  FollowBlob  Makefile  RS485Devices.h  botDefines.h  cmake_install.cmake  followBlob.cpp  piBoard.h
objTracker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.csv  followBlob.cpp  objTracked.txt  objTracker  objTracker.cpp
piBoard4/: .RS485Devices.h.swp  RS485Devices.c  RS485Devices.h  USMradar  USMradar.c  botControlScript.sh  botDefines.h  botEyesSup.sh  cfaf128.c  cfaf128.h  eyeControlScript.sh  font.h  getBatteryStatus  getBatteryStatus.c  getUSMdistance  getUSMdistance.c  information.txt  logBatteryStatus  logBatteryStatus.c  mainTestCFAF  mainTestCFAF.c  manualRTU  myPiSPI.c  myPiSPI.h  notes.txt  piBoard.c  piBoard.h  radarScript.sh  roamBot  roamBot.c  setAngleScript.sh  setCamAngle  setCamAngle.c  showBMP  showBMP.c  showEyes2.sh  simpleGFX.c  simpleGFX.h  slaveID  test  (+3 more)
wwwStuff/: BobsHomePage.txt  BotControl.php  INFORMATION.TXT  botControl.html  eyeControl.php  index.html  webcam.php
